# thumbnail-plus

./: LICENSE  README.md  thumbnail-plus.cabal
src/Graphics/: ThumbnailPlus.hs
src/Graphics/ThumbnailPlus/: ImageSize.hs
tests/: Main.hs
