name:                thumbnail-plus
version:             1.0
synopsis:            Generate thumbnails easily and safely.
homepage:            https://github.com/loyful/thumbnail-plus
license:             MIT
license-file:        LICENSE
author:              Felipe Lessa, Michael Snoyman
maintainer:          Felipe Lessa <felipe.lessa@gmail.com>
copyright:           (c) 2014 Prowdsponsor
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:
  This package provides every tool you need to easily and safely
  generate thumbnails for JPG, GIF and PNG images.
  .
  By safely, we mean that this package should be able to handle
  images uploaded to a public web server without any known
  vulnerabilities:
  .
   * File sizes are constrained and checked.
  .
   * Image sizes are constrained and checked before the images
     are loaded into memory.  Uses code from the deprecated
     @imagesize-conduit@ by Michael Snoyman.
  .
   * Optionally, the original image is reencoded before being
     saved.
  .
   * The images are processed using the
     <http://libgd.bitbucket.org/ GD library>,
     which is heavily battle-tested and audited by many pairs
     of eyeballs.
  .
  Please report any vulnerabilities you may find, we take strive
  to make this library suitable for processing arbitrary images.

library
  exposed-modules:
    Graphics.ThumbnailPlus
  build-depends:       base >=4.6 && <4.7
  hs-source-dirs:      src
  default-language:    Haskell2010
